--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext {
+        appcompat_version = '1.1.0'
+        constraintlayout_version = '1.1.3'
+        recyclerview_version = '1.1.0'
+        junit_version = '4.13'
+        junit_ext_version = '1.0.0'
+        espresso_core_version = '3.2.0'
+    }
     
     repositories {
         google()
