--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         junit_version = '4.13'
         junit_ext_version = '1.0.0'
         espresso_core_version = '3.2.0'
+        picasso_version = '2.5.2'
     }
     
     repositories {
