--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         junit_ext_version = '1.0.0'
         espresso_core_version = '3.2.0'
         picasso_version = '2.5.2'
+        room_version = '2.2.5'
+        lifecycle_version = '2.2.0'
     }
     
     repositories {
